# DreamDownloader

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
client/: client.py  requirements.txt
include/: meta.h  version.h.in
include/helpers/: BuildIdHelper.hpp  GameValidator.hpp  debugger.hpp
include/net/: AcbaaClient.hpp  AcbaaWebServer.hpp  HttpClient.hpp  HttpRequest.hpp  IWebServer.hpp
libs/: CMakeLists.txt
source/: main.cpp
source/helpers/: BuildIdHelper.cpp  GameValidator.cpp  debugger.cpp
source/net/: AcbaaClient.cpp  AcbaaWebServer.cpp  HttpClient.cpp  HttpRequest.cpp
